Fix scrollbar

--- a/core/web/src/components/navbar/Navbar.scss
+++ b/core/web/src/components/navbar/Navbar.scss
@@ -1,3 +1,15 @@
+@use '@styles/globals' as *;
+
 .MuiPopover-paper::-webkit-scrollbar {
-  display: none;
+  width: 10px;
+
+  &-track {
+    background-color: $white;
+  }
+
+  &-thumb {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    background-color: $dark;
+  }
 }
